<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Serving Size Calculator</string>
    <string name="cancel">CANCEL</string>

    <string name="select_a_pot_to_use">Select a pot to use:</string>
    <string name="add_pot">Add Pot</string>
    <string name="pot_name">Pot Name:</string>
    <string name="pot_weight_g">Pot Weight (g):</string>
    <string name="ok">OK</string>
    <string name="pot_specifications">Pot Specifications</string>
    <string name="pot">Pot</string>
    <string name="weight_empty_g">Weight Empty (g)</string>
    <string name="weightempty">WeightEmpty</string>
    <string name="potnamecalc">potNameCalc</string>

    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="servings" tools:ignore="DuplicateDefinition"># Servings</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="textview2">TextView2</string>
    <string name="back">BACK</string>

    <string name="weight_with_food_g">Weight with food (g)</string>
</resources>
