<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <TextView
        android:id="@+id/potCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/pot"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyWeightCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/weight_empty_g"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potCalc" />

    <TextView
        android:id="@+id/potWeightCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/weightempty"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emptyWeightCalc"
        app:layout_constraintTop_toBottomOf="@+id/potNameCalc" />

    <TextView
        android:id="@+id/potNameCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="64dp"
        android:text="@string/potnamecalc"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/potCalc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/withFoodWeightCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight_with_food_g"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyWeightCalc" />

    <TextView
        android:id="@+id/foodWeightCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/weight_of_food_g"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withFoodWeightCalc" />

    <TextView
        android:id="@+id/numServingsCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/servings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodWeightCalc" />

    <TextView
        android:id="@+id/servingWeightCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/serving_weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numServingsCalc" />

    <EditText
        android:id="@+id/weightWithFoodInputCalc"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="@string/weight_with_food_g"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/withFoodWeightCalc"
        app:layout_constraintTop_toBottomOf="@+id/potWeightCalc" />

    <TextView
        android:id="@+id/weightOfFoodCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/foodWeightCalc"
        app:layout_constraintTop_toBottomOf="@+id/weightWithFoodInputCalc" />

    <EditText
        android:id="@+id/numServingsInputCalc"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/servings"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightOfFoodCalc" />

    <TextView
        android:id="@+id/servingsWeightDispCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/servingWeightCalc"
        app:layout_constraintTop_toBottomOf="@+id/numServingsInputCalc" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servingsWeightDispCalc" />

</android.support.constraint.ConstraintLayout>