<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPotActivity">

    <TextView
        android:id="@+id/potNameTxt"
        android:layout_width="102dp"
        android:layout_height="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/pot_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/potWeightTxt"
        android:layout_width="100dp"
        android:layout_height="21dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/pot_weight_g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potNameTxt" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="184dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPotWeight" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/okBtn"
        app:layout_constraintTop_toBottomOf="@+id/editPotWeight" />

    <TextView
        android:id="@+id/potSpecificationsTxt"
        android:layout_width="148dp"
        android:layout_height="27dp"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/pot_specifications"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pot_name"
        app:layout_constraintStart_toEndOf="@+id/potNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/potSpecificationsTxt" />

    <EditText
        android:id="@+id/editPotWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pot_weight_g"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/potWeightTxt"
        app:layout_constraintTop_toBottomOf="@+id/editPotName" />

</android.support.constraint.ConstraintLayout>